--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "jwt-simple":"0.3.0",
         "mongoose": "3.8.8",
         "express-jwt": "0.2.1",
-        "jsonwebtoken": "0.4.0"
+        "jsonwebtoken": "0.4.0",
+        "agenda" : "^0.6.28"
     },
     "engines": {
         "node": ">=0.10.0"
